# youtube-downloader

./: .gitignore  package-lock.json  package.json
api/: Dockerfile  docker-compose.yaml  noxfile.py  pyproject.toml
api/src/: __init__.py  app.py  config.py  dashboard.py  db.py  default.toml
api/src/handlers/: __init__.py  base.py  youtube.py
api/src/jobs/: __init__.py  jobs.py  limiter.py  utils.py  worker.py
api/src/models/: file.py
api/src/routes/: __init__.py  convert.py  file.py
api/tests/: conftest.py  test_convert_api.py  test_file_api.py
api/tests/handlers/: test_youtube.py
api/tests/jobs/: test_jobs.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AlertError.tsx  AlertSuccess.tsx  DownloadForm.tsx  Header.tsx  ThemeToggleButton.tsx
frontend/src/services/: ApiService.ts
